- Experimenting with Framer Layout prop - Added dark mode toggle (switch only works visually) - Created correct layout for contact page

--- a/src/comps/footer/footer.styles.scss
+++ b/src/comps/footer/footer.styles.scss
@@ -8,8 +8,38 @@
     font-size: 22px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     height: 50px;
     color: white;
     z-index: 10;
 }
+
+.switch-container {
+    display: flex;
+    width: 200px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.switch {
+    width: 75px;
+    height: 35px;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 50px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .switch[data-ison="true"] {
+    justify-content: flex-end;
+  }
+  
+  .handle {
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    border-radius: 50%;
+  }
