--- a/src/comps/sidebar2/sidebar2.styles.scss
+++ b/src/comps/sidebar2/sidebar2.styles.scss
@@ -1,4 +1,4 @@
-.animated-sidebar {
+/* .animated-sidebar {
     color: white;
     position: absolute;
     width: 75px;
@@ -33,8 +33,41 @@
         }
     }
 
+} */
+
+// SWITCHED LAYOUT
+.animated-sidebar {
+    color: white;
+    position: relative;
+    z-index: 9;
+
+    .motion-icons {
+        display: flex;
+        width: 80vw;
+        justify-content: space-between;
+    }
+    
+    .icon-container {
+        display: flex;
+        padding: 20px;
+        box-shadow: 0px 0px 10px #7afb715b;
+    }
+    
+    .motion-icon {
+        fill: white;
+        height: 10vw;
+        width: 10vw;
+        margin: 0px 0;
+    
+        &:hover {
+            fill: #7afb71;
+            cursor: pointer;
+        }
+    }
 
 }
+
+
 
 
 
